--- a/package.json
+++ b/package.json
@@ -6,9 +6,20 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "cors": "^2.8.5",
+    "diff": "^5.0.0",
+    "firebase": "^8.2.0",
+    "firebase-tools": "^9.0.1",
+    "languagetool-api": "^1.1.2",
+    "openai-api": "^1.0.13",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-firebase-hooks": "^2.2.0",
+    "react-icons": "^4.1.0",
+    "react-native": "^0.63.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
